update travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
   - docker build -t palanugrah/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true palanugrah/docker-react npm run test
+  - docker run -e CI=true palanuugrah/docker-react npm run test
 
 deploy:
   provider: elasticbeanstalk
@@ -23,4 +23,3 @@ deploy:
   secret_access_key: $AWS_SECRET_KEY
 
 
-  Dockerreact-env.eba-6k2v5miv.ap-south-1.elasticbeanstalk.com  (e-9b32ptpxw9)
