--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ before_install:
   - docker build -t palanugrah/docker-react -f Dockerfile.dev .
 
 script:
-  - docker run -e CI=true palanuugrah/docker-react npm run test
+  - docker run -e CI=true palanugrah/docker-react npm run test
 
 deploy:
   provider: elasticbeanstalk
