--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ deploy:
   provider: elasticbeanstalk
   region: 'ap-south-1'
   app: 'docker-react'
-  env: 'docker-env'
+  env: 'Dockerreact-env'
   bucket_name: 'elasticbeanstalk-ap-south-1-301657728534'
   bucket_path: 'docker-react'
   on:
